# fasterrcnn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-bug_report_form.yml  02-bug_report.md  03-feature_request_form.yml  04-feature_request.md  config.yml
configs/datasets/: cifar10.yaml  voc2012.yaml
configs/models/: cnn.yaml  fasterrcnn.yaml
configs/training/: combined_loss_example.yaml  default.yaml  fasterrcnn_voc.yaml
configs/visualization/: tensorboard.yaml
dl_framework/: __init__.py
dl_framework/datasets/: __init__.py  base_dataset.py  cifar10.py  registry.py  voc_dataset.py
dl_framework/hooks/: __init__.py  base_hook.py  detection_visualization_hook.py  feature_map_hook.py  grad_flow.py  registry.py  system_monitor_hook.py  time_tracking_hook.py
dl_framework/losses/: __init__.py  base_loss.py  combined_loss.py  cross_entropy.py  l1_loss.py  mse_loss.py  registry.py
dl_framework/models/: __init__.py  base_model.py  cnn.py  fasterrcnn.py  registry.py
dl_framework/trainers/: base_trainer.py
dl_framework/utils/: __init__.py  checkpoint.py  config.py  logger.py
dl_framework/visualization/: __init__.py  base_visualizer.py  registry.py  tensorboard.py
dl_framework/visualization/hooks/: __init__.py  base_hook.py  grad_flow.py
docs/: custom_dataset.md  custom_model.md  github-team-workflow.md  hooks_usage.md  losses.md  model_visualization.md  tensorboard_visualization.md  usage_guide.md  voc_usage_guide.md
tools/: show_dataset.py  train.py
